removed spacing, fixed background url

--- a/qr-code-component/css/style.css
+++ b/qr-code-component/css/style.css
@@ -36,9 +36,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
   text-align: center;
-
   background: var(--white);
   height: 499px;
   width: 320px;
@@ -51,7 +49,7 @@ body {
   height: 288px;
   width: 288px;
   border-radius: 10px;
-  background-image: url("/qr-code-component/images/image-qr-code.png");
+  background-image: url("/images/image-qr-code.png");
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
